listprog.cppresult.txt
cur.cpp: In function 'int main(int, char**)':
cur.cpp:184:31: error: declaration of C function 'int main(int, char**)' conflicts with
 int main(int argc, char **argv) {
                               ^
In file included from cur.cpp:13:0:
maria/listprog.cpp:197:5: error: previous declaration 'int main()' here
 int main()
     ^
./check.sh: line 24: ./a.out: No such file or directory
